# http-relay

./: .gitignore  Cargo.toml  Dockerfile  README.md  RELEASING.md  openapi.yaml
.claude/agents/: refactor-propagator.md
.claude/rules/: demand-elegance.md  file_size.md  learned-lessons.md  lesson-update-process.md  long-lived-docs.md  subagents.md  task-lists.md
.github/workflows/: ci.yml  release.yml
demo/: README.md  next.config.js  package-lock.json  package.json
demo/app/: layout.tsx  page.tsx
src/: http_relay.rs  lib.rs  main.rs  waiting_list.rs
src/http_relay/: inbox_handler.rs  link.rs  link2.rs  link_handler.rs  mod.rs  persistence.rs  response.rs  server.rs  storage_memory.rs  types.rs  waiting_list.rs
