[package]
name = "http-relay"
description = "A Rust implementation of _some_ of [Http relay spec](https://httprelay.io/)."
version = "0.6.0"
edition = "2021"
authors = ["SeverinAlexB"]
license = "MIT"
homepage = "https://github.com/pubky/http-relay"
repository = "https://github.com/pubky/http-relay"
keywords = ["httprelay", "http", "relay"]
categories = ["web-programming"]

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
http-body = "1.0"
axum-server = "0.8.0"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3.31"
lru = "0.16.3"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.8"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

[[bin]]
name = "http-relay"
path = "src/main.rs"

[dev-dependencies]
axum-test = "18.7.0"
http-body-util = "0.1"
